# gdax_rs

./: .travis.yml  Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/: get_24hr_stats.rs  get_currencies.rs  get_historic_rates.rs  get_product.rs  get_product_order_book.rs  get_product_ticker.rs  get_time.rs  get_trades.rs
src/: currencies.rs  error.rs  lib.rs  product.rs  rest_client.rs  serde_util.rs  time.rs  url.rs
src/products/: get_24hr_stats.rs  get_currencies.rs  get_historic_rates.rs  get_product_order_book.rs  get_product_ticker.rs  get_products.rs  get_trades.rs  mod.rs
